Add client logging. Adjust hub.

--- a/receiver/styles.css
+++ b/receiver/styles.css
@@ -3,11 +3,33 @@
     padding: 0;
     height: 100vh;
   }
+  header {
+    margin: 1rem;
+    margin-top: 0;
+    padding: 0.5rem;
+    border-bottom: 1px solid black;
+  }
+  header ul {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0;
+    padding: 0;
+    font-size: 1rem;
+  }
+  header li {
+    display: flex;
+  }
+  header p {
+    margin: 0;
+    padding: 0;
+  }
   main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
   }
@@ -16,7 +38,7 @@
   }
   input {
     padding: 0.5rem;
-    margin: 0.2rem;
+    margin: 0.2rem 0 1rem 0;
     width: 300px;
     font-size: 1.25rem;
     border: 1px solid black;
@@ -39,9 +61,16 @@
   button:active {
     border-color: #ccc;
   }
+  button.small {
+    font-size: 1rem;
+    padding: 0.5rem;
+    margin: 0;
+    box-shadow: none;
+  }
   h2 {
     padding: 0;
     margin: 0 0 0 0.2rem;
+    font-family: "Helvetica Neue";
   }
   #notification {
     width: 250px;
@@ -58,6 +87,7 @@
     animation: easeIn 0.5s forwards;
     display: none;
   }
+
   @keyframes easeIn {
     from {
       opacity: 0;
@@ -68,3 +98,59 @@
       transform: translateY(0);
     }
   }
+
+  @keyframes slideDown {
+    from {
+      opacity: 0;
+      transform: translateY(-3rem);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
+  .info {
+    font-style: italic;
+    color: #ccc;
+  }
+
+  .user-form {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .user-form button {
+    width: 100%;
+  }
+
+  #modal h2 {
+    margin-bottom: 1rem;
+  }
+
+  #modal {
+    position: fixed;
+    width: 50%;
+    top: 15vh;
+    left: 25%;
+    z-index: 30;
+    background-color: white;
+    box-shadow: 0 8px 5px rgba(0, 0, 0, 0.25);
+    padding: 1rem;
+    border-radius: 0.5rem;
+    animation: slideDown 300ms ease-out forwards;
+    display: none;
+  }
+
+  #backdrop {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 20;
+    background-color: rgba(0, 0, 0, 0.75);
+    display: none;
+  }
+
