--- a/Manager/Manager/AppShell.xaml
+++ b/Manager/Manager/AppShell.xaml
@@ -4,24 +4,23 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:views="clr-namespace:Manager.Views"
-    Shell.FlyoutBehavior="Flyout">
+    Shell.FlyoutBehavior="Flyout"
+    Shell.FlyoutBackdrop="rgba(0, 0, 0, 0.25)"
+    >
 
     <Shell.ItemTemplate>
         <DataTemplate>
-            <Grid VerticalOptions="CenterAndExpand"
-                  HorizontalOptions="StartAndExpand"
-                  Margin="10">
+            <VerticalStackLayout Padding="10">
                 <Label Text="{Binding Title}"
-                       VerticalTextAlignment="Center"
-                       HorizontalOptions="Start"
-                       HorizontalTextAlignment="Start"
-                       FontSize="Header"
+                       HorizontalOptions="Center"
+                       FontSize="24"
+                       FontAttributes="Bold"
                        />
-            </Grid>
+            </VerticalStackLayout>
         </DataTemplate>
     </Shell.ItemTemplate>
 
-    <FlyoutItem FlyoutDisplayOptions="AsMultipleItems">
+    <FlyoutItem FlyoutDisplayOptions="AsMultipleItems" >
         <ShellContent
             Title="Home"
             ContentTemplate="{DataTemplate views:MainPage}" />
@@ -29,6 +28,10 @@
         <ShellContent
             Title="Notifications"
             ContentTemplate="{DataTemplate views:NotificationsListPage}" />
+
+        <ShellContent
+            Title="Connected users"
+            ContentTemplate="{DataTemplate views:UsersListPage}" />
     </FlyoutItem>
 
 </Shell>
