--- a/Manager/Manager/Views/MainPage.xaml
+++ b/Manager/Manager/Views/MainPage.xaml
@@ -3,9 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Manager.Views.MainPage"
              xmlns:viewmodels="clr-namespace:Manager.ViewModels"
-             x:DataType="viewmodels:MainWindowViewModel"
+             x:DataType="viewmodels:MainPageViewModel"
              >
-
 
     <Grid Padding="10" RowSpacing="10" ColumnSpacing="10">
         <Grid.RowDefinitions>
@@ -47,7 +46,7 @@
                                            BackgroundColor="Red"
                                            Command="{Binding Source={
                                                 RelativeSource AncestorType={
-                                                    x:Type viewmodels:MainWindowViewModel}},
+                                                    x:Type viewmodels:MainPageViewModel}},
                                                 Path=DeleteCommand}"
                                            CommandParameter="{Binding .}"
                                            />
@@ -59,7 +58,7 @@
                                     <TapGestureRecognizer
                                         Command="{Binding Source={
                                             RelativeSource AncestorType={
-                                                x:Type viewmodels:MainWindowViewModel}},
+                                                x:Type viewmodels:MainPageViewModel}},
                                             Path=TapCommand}"
                                         CommandParameter="{Binding .}"
                                         />
